feat: add vehicle types
